integration_tests/codegen_fail/fail/input-object/derive_incompatible_object.rs
#[derive(juniper::GraphQLObject)]
struct ObjectA {
    test: String,
}

#[derive(juniper::GraphQLInputObject)]
struct Object {
    field: ObjectA,
}

fn main() {}
